# NewGP-MPI

./: README.md  REF-LINKS.txt
nyex/: BUILD.txt  CMakeLists.txt  README.txt  apply_tsrank.cpp  build.sh  make.sh  nyex-main-py3.cpp  nyex-welford-py3.cpp  nyex.c  nyexd-py3.c  nyexf-par-py3.c  nyexf-py3.c  nyexf.c  rolling_window.cpp  rolling_window.h  setup.py  skew_kurt.cpp  test-nyex-par.py  test-nyex-welford.py  test-nyex.py
symbreg-dx/: AddT.hpp  BUILD.txt  CMakeLists.txt  Config.h  Cos.cpp  Cos.hpp  DataSetRegression.cpp  DataSetRegression.hpp  DivideT.hpp  Exp.cpp  Exp.hpp  Log.cpp  Log.hpp  MultiplyT.hpp  ReadMe.txt  Sin.cpp  Sin.hpp  SubtractT.hpp  SymbRegEvalOp.cpp  SymbRegEvalOp.hpp  SymbRegMain.cpp  Table.cpp  Table.h  beagle.log~  main.cpp  make-and-run.bat
symbreg-dx/Utils/: Parquet.cpp  Parquet.h  rolling_window.h
symbreg-dx/pysymbreg/: datatype.py  operator.py
symbreg-dx/tests/: par-rolling-mean.py
